--- a/randomcolor.html
+++ b/randomcolor.html
@@ -7,11 +7,9 @@
     <link rel="stylesheet" href="randomcolor.css">
 </head>
 <body>
-
-    
     <h1>You can Generate random color</h1>
     <h3></h3>
-    <div class="color"></div>
+    <div></div>
     <button>Generate</button>
     <h4>My favorite <b>Black🖤🖤🖤</b></h4>
     
