--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
   <section class="certificates">
     <div class="CertificateH">
-      <h2><span class="c">C</span>ertificates</h2>
+      <h2 class="C"><span class="c">C</span>ertificates</h2>
     </div>
 
     <div class="Cimage">
