--- a/index.html
+++ b/index.html
@@ -163,6 +163,12 @@
 
   <div class="main5">
 
+    <div class="box5">
+      <div class="img1 apnaghar"></div>
+      <h4>ApnaGhar</h4>
+      <a href="https://majorproject-vlhl.onrender.com/listings" target="main" class="links">Open</a>
+    </div>
+
  <div class="box5">
       <div class="img1 img8"></div>
       <h4>WeatherApp</h4>
@@ -176,6 +182,11 @@
       <a href="Todo.html" target="main" class="links">Play</a>
     </div>
 
+    <div class="box5">
+      <div class="img1 img4"></div>
+      <h4>Random Color</h4>
+      <a href="randomcolor.html" target="main" class="links">Play</a>
+    </div>
 
     <div class="box5">
       <div class="img1 img3"></div>
@@ -184,18 +195,7 @@
     </div>
 
 
-    <div class="box5">
-      <div class="img1 img4"></div>
-      <h4>Random Color</h4>
-      <a href="randomcolor.html" target="main" class="links">Play</a>
-    </div>
-
-
-    <div class="box5">
-      <div class="img1 img5"></div>
-      <h4>Random Dog Images</h4>
-      <a href="randomDog.html" target="main" class="links">Play</a>
-    </div>
+    
 
   </div>
 
