--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
     </div>
 
     <div class="Cimage">
+      <img src="AWS.png" alt="">
+    </div>
+
+    <div class="Cimage">
       <img src="ProdgyC.png" alt="">
     </div>
 
