--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
     <div class="CertificateH">
       <h2 class="C"><span class="c">C</span>ertificates</h2>
     </div>
-
     <div class="Cimage">
-      <img src="AWS.png" alt="">
+      <img src="Aws.png" alt="">
     </div>
+  
 
     <div class="Cimage">
       <img src="ProdgyC.png" alt="">
