--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <h2 class="C"><span class="c">C</span>ertificates</h2>
     </div>
     <div class="Cimage">
-      <img src="Aws.png" alt="">
+      <img src="awss.png" alt="">
     </div>
   
 
