--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
     <div class="CertificateH">
       <h2 class="C"><span class="c">C</span>ertificates</h2>
     </div>
+
+    <div class="Cimage">
+      <img src="flipkart.png" alt="">
+    </div>
+
     <div class="Cimage">
       <img src="awss.png" alt="">
     </div>
