improvement in navbar and night mode

--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
   <section class="firstPage">  
     <div data-aos="fade-down" class="navdiv">
       <div class="Prince">Portfolio.</div>
+      <button id="theme-toggle" class="theme-icon">🌙</button>
       <div class="navitems" id="nav-material">
         <ul>
             <a href="#"><li>Home</li></a>
             <a href="#secondPage"><li>Skills</li></a>
             <a href="#thirdPage"><li>About</li></a>
             <a href="#pageSix"><li class="Contact">Contact</li> </a>
-            <i class="fa-solid fa-moon"></i>
+            <!-- <i class="fa-solid fa-moon"></i> -->
         </ul>
       </div>
       <i id="ham" class="fa-solid fa-bars"></i>
