--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
 
 
-                                          <!-- Hero Section -->
+  <!-- Hero Section -->
   <div class="focus">
 
     <section class="firstPage">
       <div data-aos="fade-down" class="navdiv">
         <div class="Prince">Portfolio.</div>
-        <button id="theme-toggle" class="theme-icon">🌞</button>
+        <button id="theme-toggle" class="theme-icon">🌙</button>
         <div class="navitems" id="nav-material">
           <ul>
             <a href="#">
@@ -40,7 +40,7 @@
             <a href="#pageSix">
               <li class="Contact">Contact</li>
             </a>
-            
+
           </ul>
         </div>
         <i id="ham" class="fa-solid fa-bars"></i>
@@ -75,7 +75,7 @@
       </div>
     </section>
 
-                                     <!-- My Awesome Services -->
+    <!-- My Awesome Services -->
 
     <section id="secondPage">
       <div class="mainBox">
@@ -117,7 +117,7 @@
 
 
 
-                                     <!-- Skills Section -->
+    <!-- Skills Section -->
     <div class="skills-section">
       <h1 data-aos="fade-right" class="C skills"><span class="c">M</span>y Skills</h1>
       <p>Passionate and skilled in building full-stack web applications with modern technologies. Dedicated to creating
@@ -205,7 +205,7 @@
       </div>
     </div>
 
-                                   <!-- //certificate section -->
+    <!-- //certificate section -->
     <section class="certificates">
       <div data-aos="fade-right" class="CertificateH">
         <h2 class="C"><span class="c">C</span>ertificates</h2>
@@ -215,6 +215,7 @@
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
           <!-- Slides -->
+          <div class="swiper-slide"><img src="./assets/Reliance.png" alt="image"></div>
           <div class="swiper-slide"><img src="./assets/flipkart.png" alt="image"></div>
           <div class="swiper-slide"><img src="./assets/awss.png" alt="image"></div>
           <div class="swiper-slide"><img src="./assets/ProdgyC.png" alt="image"></div>
@@ -234,7 +235,7 @@
     </section>
 
 
-                                       <!-- About Me -->
+    <!-- About Me -->
     <section id="thirdPage">
       <div class="about-container ">
         <div class="about-heading ">
@@ -247,7 +248,8 @@
               ideas to life through code. <br> <br>As a full-stack developer, I enjoy the dynamic nature of my work,
               where I seamlessly transition between frontend and backend development to create cohesive solutions. <br>
               <br>My toolkit includes a range of technologies and frameworks such as HTML, CSS, JavaScript, React.js,
-              Node.js, and MongoDB, among others.</p>
+              Node.js, and MongoDB, among others.
+            </p>
 
           </div>
           <div class="small-pic"></div>
@@ -259,7 +261,7 @@
       </div>
     </section>
 
-                                             <!-- Recent Project -->
+    <!-- Recent Project -->
 
     <section id="pageFive">
       <div data-aos="fade-up" class="recent">
@@ -270,11 +272,28 @@
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
           <!-- Slides -->
+
+          <div class="swiper-slide">
+            <div class="box5">
+              <div class="img1 zooom"></div>
+              <h4>Zoom</h4>
+              <a href="https://zoomclonefrontend-jnpc.onrender.com/" target="main" class="links">Open</a>
+            </div>
+          </div>
+
           <div class="swiper-slide">
             <div class="box5">
               <div class="img1 apnaghar"></div>
-              <h4>ApnaGhar</h4>
+              <h4>ApnaGhar(AirBnb)</h4>
               <a href="https://majorproject-vlhl.onrender.com/listings" target="main" class="links">Open</a>
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <div class="box5">
+              <div class="img1 zomato"></div>
+              <h4>Zomato</h4>
+              <a href="zomatoClone/index.html" target="main" class="links">Open</a>
             </div>
           </div>
 
@@ -306,7 +325,7 @@
             <div data-aos="fade-up" class="box5">
               <div class="img1 img3"></div>
               <h4>Simon Says Game</h4>
-              <a href="Simon.html" target="main" class="links">Play</a>
+              <a href="simonGame/Simon.html" target="main" class="links">Play</a>
             </div>
           </div>
 
@@ -322,7 +341,7 @@
 
     </section>
 
-                                     <!-- Accordian Section -->
+    <!-- Accordian Section -->
     <div class="accor">
       <div data-aos="fade-right" class="accordian">
         <div class="questions">
@@ -363,7 +382,7 @@
 
 
 
-                                 <!-- Contact Section -->
+    <!-- Contact Section -->
 
     <section id="pageSix">
       <div class="contact_text">
@@ -399,8 +418,8 @@
 
     </section>
 
-                                     <!-- Footer Secion -->
-                                      
+    <!-- Footer Secion -->
+
     <footer class="footer">
       <div class="icons ii">
         <a href="https://github.com/prince-8888" target="main"><i class='bx bxl-github foot'></i></a>
