--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
           <p class="lorem">Bringing it all together, I specialize in full-stack development, seamlessly integrating
             frontend and backend technologies to create cohesive and scalable applications</p>
-          <a href="ResumeUpdated.pdf"><button class="cvbutton">Download CV</button></a>
+          <a href="LUpdatedResume.pdf"><button class="cvbutton">Download CV</button></a>
         </div>
         <div data-aos="fade-right" class="secondBox">
           <div class="secondOne same">
